[tool.poetry]
name = "machinetranslation"
version = "0.1.0"
description = ""
authors = ["user0 <dylan.p.maus@gmail.com>"]
readme = "README.md"
packages = [{include = "machinetranslation"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchtext = "^0.15.1"
torchdata = "^0.6.0"
spacy = "^3.5.2"
portalocker = "^2.7.0"
pre-commit = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
